extract computation duration time and adjust size of big project